--- a/notebooks/a-star_path_finder.ipynb
+++ b/notebooks/a-star_path_finder.ipynb
@@ -1,8 +1,194 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Domain Definiftions"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 235,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dataclasses import dataclass\n",
+    "from enum import Enum\n",
+    "from typing import List, Dict, Tuple"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 238,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@dataclass(frozen=False)\n",
+    "class Node:\n",
+    "    x: int\n",
+    "    y: int\n",
+    "\n",
+    "    @property\n",
+    "    def id(self) -> Tuple[int, int]:\n",
+    "        return self.x, self.y\n",
+    "\n",
+    "    def find_neighbors(self):\n",
+    "        pass\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 239,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Terrain(Enum):\n",
+    "    Asphalt = (\"Terra\", 1)\n",
+    "    Flooding = (\"Agua\", 3)\n",
+    "    Quicksand = (\"Areia Movedica\", 6)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 240,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@dataclass(frozen=True)\n",
+    "class Edge:\n",
+    "    source: Node\n",
+    "    destionation: Node\n",
+    "    terrain: Terrain\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 242,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@dataclass(frozen=False)\n",
+    "class Graph:\n",
+    "    nodes: Dict[Tuple, Node]\n",
+    "    edges: List[Edge]\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        self.nodes = {}\n",
+    "        self.edges = []\n",
+    "\n",
+    "    def with_node(self, node: Node):\n",
+    "        self.nodes[node.id] = node\n",
+    "        return self\n",
+    "\n",
+    "    def with_edge(self, edge: Edge):\n",
+    "        self.edges.append(edge)\n",
+    "        return self\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Graph Construction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 263,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Add nodes to the graph\n",
+    "\n",
+    "nodeA = Node(0,0)\n",
+    "nodeB = Node(0,1)\n",
+    "nodeC = Node(1,0)\n",
+    "nodeD = Node(1,1)\n",
+    "\n",
+    "graph = Graph()\\\n",
+    "            .with_node(nodeA)\\\n",
+    "            .with_node(nodeB)\\\n",
+    "            .with_node(nodeC)\\\n",
+    "            .with_node(nodeD) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 264,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_values([Node(x=0, y=0), Node(x=0, y=1), Node(x=1, y=0), Node(x=1, y=1)])"
+      ]
+     },
+     "execution_count": 264,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "graph.nodes.values()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 272,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Node(x=1, y=1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for node in graph.nodes.values():\n",
+    "    pos = node.id \n",
+    "\n",
+    "    up = (pos[0], pos[1]-1)\n",
+    "    down = (pos[0], pos[1]+1)\n",
+    "    left = (pos[0]-1, pos[1])\n",
+    "    right = (pos[0]+1, pos[1])\n",
+    "    down_right = (pos[0]+1, pos[1]+1)\n",
+    "\n",
+    "    neighbor = graph.nodes.get(down_right)\n",
+    "    print(neighbor)\n",
+    "    break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 196,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "({(1, 2): 'lalalla'}, 0)"
+      ]
+     },
+     "execution_count": 196,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data Science"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,29 +198,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "area_height: int = 8\n",
-    "area_width: int = 10"
+    "area_width: int = 8"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "def build_array(height: int, width: int) -> np.ndarray:\n",
     "    lines = [np.arange(row_num, row_num+width/10, step=0.1) for row_num in range(0, height)]\n",
-    "    lines.reverse()\n",
     "    return np.stack(lines)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,23 +235,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[7. , 7.1, 7.2, 7.3, 7.4, 7.5, 7.6, 7.7, 7.8, 7.9],\n",
-       "       [6. , 6.1, 6.2, 6.3, 6.4, 6.5, 6.6, 6.7, 6.8, 6.9],\n",
-       "       [5. , 5.1, 5.2, 5.3, 5.4, 5.5, 5.6, 5.7, 5.8, 5.9],\n",
-       "       [4. , 4.1, 4.2, 4.3, 4.4, 4.5, 4.6, 4.7, 4.8, 4.9],\n",
-       "       [3. , 3.1, 3.2, 3.3, 3.4, 3.5, 3.6, 3.7, 3.8, 3.9],\n",
-       "       [2. , 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9],\n",
-       "       [1. , 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9],\n",
-       "       [0. , 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9]])"
+       "array([[0. , 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7],\n",
+       "       [1. , 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7],\n",
+       "       [2. , 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7],\n",
+       "       [3. , 3.1, 3.2, 3.3, 3.4, 3.5, 3.6, 3.7],\n",
+       "       [4. , 4.1, 4.2, 4.3, 4.4, 4.5, 4.6, 4.7],\n",
+       "       [5. , 5.1, 5.2, 5.3, 5.4, 5.5, 5.6, 5.7],\n",
+       "       [6. , 6.1, 6.2, 6.3, 6.4, 6.5, 6.6, 6.7],\n",
+       "       [7. , 7.1, 7.2, 7.3, 7.4, 7.5, 7.6, 7.7]])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,36 +271,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16, 17,\n",
-       "       18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34,\n",
-       "       35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51,\n",
-       "       52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63])"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.arange(1, 64, step=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -117,9 +279,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.2 64-bit",
    "language": "python",
-   "name": "python3"
+   "name": "python38264bit2c1b7a46cd9945cba13568f8d3df8e1e"
   },
   "language_info": {
    "codemirror_mode": {
@@ -131,7 +293,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
