generating graph structure

--- a/notebooks/a-star_path_finder.ipynb
+++ b/notebooks/a-star_path_finder.ipynb
@@ -4,23 +4,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Domain Definiftions"
+    "# Domain Definiftions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 384,
    "metadata": {},
    "outputs": [],
    "source": [
     "from dataclasses import dataclass\n",
     "from enum import Enum\n",
-    "from typing import List, Dict, Tuple"
+    "from typing import List, Dict, Tuple, Optional\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 387,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,10 +28,29 @@
     "class Node:\n",
     "    x: int\n",
     "    y: int\n",
+    "    blocked: bool\n",
+    "\n",
+    "    def __init__(self, x: int, y: int):\n",
+    "        self.x = x\n",
+    "        self.y = y\n",
+    "        self.blocked = Node.is_blocked()\n",
+    "\n",
+    "    \"\"\"\n",
+    "    Generate a binomial random distribution of '0' and '1's\n",
+    "    where '0's represent the node is blocked, and therefore \n",
+    "    it cannot be reached\n",
+    "    \"\"\"\n",
+    "    @classmethod\n",
+    "    def is_blocked(cls):\n",
+    "        dist = np.random.binomial(1, 0.8)\n",
+    "        return True if dist == 0 else False\n",
     "\n",
     "    @property\n",
     "    def id(self) -> Tuple[int, int]:\n",
     "        return self.x, self.y\n",
+    "\n",
+    "    def is_free(self):\n",
+    "        return not self.blocked\n",
     "\n",
     "    def find_neighbors(self):\n",
     "        pass\n"
@@ -39,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 388,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,149 +70,149 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 389,
    "metadata": {},
    "outputs": [],
    "source": [
-    "@dataclass(frozen=True)\n",
+    "@dataclass(frozen=False)\n",
     "class Edge:\n",
     "    source: Node\n",
     "    destionation: Node\n",
-    "    terrain: Terrain\n"
+    "    terrain: Terrain\n",
+    "\n",
+    "    def __init__(self, source: Node, dest: Node, terrain: Terrain = Terrain.Asphalt):\n",
+    "        self.source = source\n",
+    "        self.destionation = dest\n",
+    "        self.terrain = terrain\n",
+    "\n",
+    "    def update_terrain(self, terrain: Terrain):\n",
+    "        self.terrain = terrain\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 390,
    "metadata": {},
    "outputs": [],
    "source": [
     "@dataclass(frozen=False)\n",
     "class Graph:\n",
-    "    nodes: Dict[Tuple, Node]\n",
+    "    nodes: Dict[Tuple[int,int], Node]\n",
     "    edges: List[Edge]\n",
+    "    x: Dict[Tuple[Node,Node],Edge]\n",
     "\n",
     "    def __init__(self):\n",
     "        self.nodes = {}\n",
     "        self.edges = []\n",
     "\n",
+    "    def find_neighbors_of(self, node: Node):\n",
+    "        if node.is_free():\n",
+    "            for pos in self._find_neighbors_pos_estimation(node):\n",
+    "                neighbor: Optional[Node] = self.nodes.get(pos)\n",
+    "                if neighbor != None and neighbor.is_free():\n",
+    "                    yield self.nodes.get(pos)\n",
+    "\n",
+    "    \"\"\"\n",
+    "    estimated positions return a list of expected neighbors as follows: \n",
+    "    up, down, left, right, up_right, up_left, down_right, down_left\n",
+    "    \"\"\"\n",
+    "    def _find_neighbors_pos_estimation(self, node: Node):\n",
+    "        pos = node.id\n",
+    "        estimated_neighbors = [\n",
+    "            (pos[0], pos[1]-1),\n",
+    "            (pos[0], pos[1]+1),\n",
+    "            (pos[0]-1, pos[1]),\n",
+    "            (pos[0]+1, pos[1]),\n",
+    "            (pos[0]+1, pos[1]-1),\n",
+    "            (pos[0]-1, pos[1]-1),\n",
+    "            (pos[0]+1, pos[1]+1),\n",
+    "            (pos[0]-1, pos[1]+1)\n",
+    "        ]\n",
+    "        return estimated_neighbors\n",
+    "\n",
     "    def with_node(self, node: Node):\n",
     "        self.nodes[node.id] = node\n",
     "        return self\n",
     "\n",
+    "    def with_nodes(self, nodes: List[Node]):\n",
+    "        [self.with_node(node) for node in nodes]\n",
+    "        return self\n",
+    "\n",
     "    def with_edge(self, edge: Edge):\n",
     "        self.edges.append(edge)\n",
-    "        return self\n"
+    "        return self\n",
+    "\n",
+    "    def with_edges(self, edges: List[Edge]):\n",
+    "        [self.with_edge(edge) for edge in edges]\n",
+    "        return self\n",
+    "\n",
+    "    def reset(self):\n",
+    "        return Graph()\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Graph Construction"
+    "# Graph Construction"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 263,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Add nodes to the graph\n",
-    "\n",
-    "nodeA = Node(0,0)\n",
-    "nodeB = Node(0,1)\n",
-    "nodeC = Node(1,0)\n",
-    "nodeD = Node(1,1)\n",
-    "\n",
-    "graph = Graph()\\\n",
-    "            .with_node(nodeA)\\\n",
-    "            .with_node(nodeB)\\\n",
-    "            .with_node(nodeC)\\\n",
-    "            .with_node(nodeD) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 264,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_values([Node(x=0, y=0), Node(x=0, y=1), Node(x=1, y=0), Node(x=1, y=1)])"
-      ]
-     },
-     "execution_count": 264,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "graph.nodes.values()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 272,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Node(x=1, y=1)\n"
-     ]
-    }
-   ],
-   "source": [
-    "for node in graph.nodes.values():\n",
-    "    pos = node.id \n",
-    "\n",
-    "    up = (pos[0], pos[1]-1)\n",
-    "    down = (pos[0], pos[1]+1)\n",
-    "    left = (pos[0]-1, pos[1])\n",
-    "    right = (pos[0]+1, pos[1])\n",
-    "    down_right = (pos[0]+1, pos[1]+1)\n",
-    "\n",
-    "    neighbor = graph.nodes.get(down_right)\n",
-    "    print(neighbor)\n",
-    "    break"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 196,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "({(1, 2): 'lalalla'}, 0)"
-      ]
-     },
-     "execution_count": 196,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Data Science"
+    "### Building the graph"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 391,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n"
+    "import matplotlib.pyplot as pt\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 392,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_nodes(width: int, height: int):\n",
+    "    for row_num in range(height):\n",
+    "        for col_num in range(width):\n",
+    "            yield Node(row_num, col_num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 393,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nodes = generate_nodes(area_width, area_height)\n",
+    "graph = Graph().with_nodes(nodes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 394,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for node in graph.nodes.values():\n",
+    "    neighbors: List[Node] = graph.find_neighbors_of(node)\n",
+    "    edges: List[Edge] = [Edge(node, neighbor) for neighbor in neighbors]\n",
+    "    graph.with_edges(edges)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Sort Terrains in Graph to screw with the edges originating from it"
    ]
   },
   {
@@ -204,70 +223,39 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "area_height: int = 8\n",
-    "area_width: int = 8"
+    "# PathFinder Algorithm"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### A* Implementation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "def build_array(height: int, width: int) -> np.ndarray:\n",
-    "    lines = [np.arange(row_num, row_num+width/10, step=0.1) for row_num in range(0, height)]\n",
-    "    return np.stack(lines)"
+    "# Graph Visualization"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "board = build_array(area_height, area_width)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0. , 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7],\n",
-       "       [1. , 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7],\n",
-       "       [2. , 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7],\n",
-       "       [3. , 3.1, 3.2, 3.3, 3.4, 3.5, 3.6, 3.7],\n",
-       "       [4. , 4.1, 4.2, 4.3, 4.4, 4.5, 4.6, 4.7],\n",
-       "       [5. , 5.1, 5.2, 5.3, 5.4, 5.5, 5.6, 5.7],\n",
-       "       [6. , 6.1, 6.2, 6.3, 6.4, 6.5, 6.6, 6.7],\n",
-       "       [7. , 7.1, 7.2, 7.3, 7.4, 7.5, 7.6, 7.7]])"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "board"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "values = np.random.randint(low=1, high=100, size=1000)\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
