--- a/notebooks/a-star_path_finder.ipynb
+++ b/notebooks/a-star_path_finder.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 236,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,12 +53,15 @@
     "        return not self.blocked\n",
     "\n",
     "    def find_neighbors(self):\n",
-    "        pass\n"
+    "        pass\n",
+    "\n",
+    "    def __hash__(self):\n",
+    "        return self.id.__hash__()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,25 +88,28 @@
     "        self.destionation = dest\n",
     "        self.terrain = terrain\n",
     "\n",
+    "    @property\n",
+    "    def weight(self):\n",
+    "        return self.terrain.value[1]\n",
+    "    \n",
     "    def update_terrain(self, terrain: Terrain):\n",
-    "        self.terrain = terrain\n"
+    "        self.terrain = terrain"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [],
    "source": [
     "@dataclass(frozen=False)\n",
     "class Graph:\n",
     "    nodes: Dict[Tuple[int,int], Node]\n",
-    "    edges: List[Edge]\n",
-    "    x: Dict[Tuple[Node,Node],Edge]\n",
+    "    edges: Dict[Tuple[Node,Node], Edge]\n",
     "\n",
     "    def __init__(self):\n",
-    "        self.nodes = {}\n",
-    "        self.edges = []\n",
+    "        self.nodes = dict()\n",
+    "        self.edges = dict()\n",
     "\n",
     "    def find_neighbors_of(self, node: Node):\n",
     "        if node.is_free():\n",
@@ -111,6 +117,9 @@
     "                neighbor: Optional[Node] = self.nodes.get(pos)\n",
     "                if neighbor != None and neighbor.is_free():\n",
     "                    yield self.nodes.get(pos)\n",
+    "\n",
+    "    def find_edge_connecting(self, source: Node, dest: Node):\n",
+    "        return self.edges.get((source, dest))\n",
     "\n",
     "    \"\"\"\n",
     "    estimated positions return a list of expected neighbors as follows: \n",
@@ -139,7 +148,9 @@
     "        return self\n",
     "\n",
     "    def with_edge(self, edge: Edge):\n",
-    "        self.edges.append(edge)\n",
+    "        src = edge.source\n",
+    "        dest = edge.destionation\n",
+    "        self.edges[src,dest] = edge\n",
     "        return self\n",
     "\n",
     "    def with_edges(self, edges: List[Edge]):\n",
@@ -166,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 240,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 241,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 244,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,13 +253,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 245,
    "metadata": {},
    "outputs": [],
    "source": [
-    "distance = []\n",
-    "end_node = (area_width, area_height)"
+    "class AStarAlgorithm:\n",
+    "    graph: Graph\n",
+    "\n",
+    "    def __init__(self, graph: Graph):\n",
+    "        self.graph = graph\n",
+    "\n",
+    "    def shortest_path_between(self, source: Node, destination: Node) -> List[Node]:\n",
+    "        neighbors: List[Node] = graph.find_neighbors_of(source)\n",
+    "        edges: List[Edge] = [graph.find_edge_connecting(source, neighbor) for neighbor in neighbors]\n",
+    "        return edges"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 246,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a_star = AStarAlgorithm(graph)\n",
+    "source = graph.nodes.get((0,0))\n",
+    "dest = graph.nodes.get((area_width-1, area_height-1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 247,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path: List[Node] = a_star.shortest_path_between(source, dest)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -256,10 +302,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Pathfiding:\n",
+    "class PathFinder:\n",
     "  start_node = (0,0)\n",
-    "  \n",
-    "  \n",
+    "\n",
     "\n",
     "def distance_to_end(node: Node):\n",
     "    distance.append(math.sqrt(pow(end_node[0] - node.x,2) + pow(end_node[1] - node.y,2)))\n",
@@ -398,9 +443,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.2 64-bit",
    "language": "python",
-   "name": "python3"
+   "name": "python38264bit2c1b7a46cd9945cba13568f8d3df8e1e"
   },
   "language_info": {
    "codemirror_mode": {
