--- a/notebooks/a-star_path_finder.ipynb
+++ b/notebooks/a-star_path_finder.ipynb
@@ -9,18 +9,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from collections import deque as stack\n",
     "from dataclasses import dataclass\n",
     "from enum import Enum\n",
-    "from typing import List, Dict, Tuple, Optional\n"
+    "from typing import List, Set, Dict, Tuple, Optional\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,10 +31,10 @@
     "    y: int\n",
     "    blocked: bool\n",
     "\n",
-    "    def __init__(self, x: int, y: int):\n",
+    "    def __init__(self, x: int, y: int, blocked: bool = Node.is_blocked()):\n",
     "        self.x = x\n",
     "        self.y = y\n",
-    "        self.blocked = Node.is_blocked()\n",
+    "        self.blocked = False\n",
     "\n",
     "    \"\"\"\n",
     "    Generate a binomial random distribution of '0' and '1's\n",
@@ -61,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,50 +178,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 270,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as pt\n",
-    "import math  \n"
+    "import math"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 271,
    "metadata": {},
    "outputs": [],
    "source": [
     "def generate_nodes(width: int, height: int):\n",
-    "    for row_num in range(height):\n",
-    "        for col_num in range(width):\n",
+    "    for row_num in range(width):\n",
+    "        for col_num in range(height):\n",
     "            yield Node(row_num, col_num)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 272,
    "metadata": {},
    "outputs": [],
    "source": [
-    "area_width = 8\n",
-    "area_height = 8"
+    "area_width = 3\n",
+    "area_height = 4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 273,
    "metadata": {},
    "outputs": [],
    "source": [
-    "nodes = generate_nodes(area_width, area_height)\n",
+    "nodes = list(generate_nodes(area_width, area_height))\n",
     "graph = Graph().with_nodes(nodes)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 279,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## For debugging purposes only\n",
+    "\n",
+    "entries = [(1,1), (1,2), (2,2)]\n",
+    "\n",
+    "for entry in entries:\n",
+    "    node = graph.nodes.get(entry)\n",
+    "    node.blocked = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 280,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,30 +269,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 282,
    "metadata": {},
    "outputs": [],
    "source": [
     "class AStarAlgorithm:\n",
     "    graph: Graph\n",
+    "    visited_nodes: Set[Node]\n",
     "\n",
     "    def __init__(self, graph: Graph):\n",
     "        self.graph = graph\n",
+    "        self.visited_nodes = set()\n",
+    "        self.path_stack = stack()\n",
     "\n",
     "    def shortest_path_between(self, source: Node, target: Node) -> List[Node]:\n",
-    "        neighbors: List[Node] = graph.find_neighbors_of(source)\n",
-    "        edges: List[Edge] = [graph.find_edge_connecting(source, neighbor) for neighbor in neighbors]\n",
-    "        heuristics: List[float] = [a_star.distance_between(edge.destination, target, edge.weight) for edge in edges]\n",
-    "        return heuristics\n",
+    "        neighbors: Set[Node] = set(graph.find_neighbors_of(source))\n",
+    "        neighbors = neighbors.difference(visited_nodes)\n",
+    "\n",
+    "        if len(neighbors) > 0:\n",
+    "            edges: List[Edge] = [graph.find_edge_connecting(source, neighbor) for neighbor in neighbors]\n",
+    "            nodes_heuristics = [a_star.distance_between(edge.destination, target, edge.weight) for edge in edges]\n",
+    "            best_node_heuristic = min(nodes_heuristics, key=lambda h: h[1])\n",
+    "            selected_neighbor = best_node_heuristic[0]\n",
+    "\n",
+    "            self.visited_node.add(source)\n",
+    "            self.path_stack.append(source)\n",
+    "            shortest_path_between(source=selected_neighbor, target=target)\n",
+    "\n",
+    "        else:\n",
+    "            # Rollback\n",
+    "            last_visited_node = self.path_stack.pop()\n",
+    "            visited_nodes.remove(last_visited_node)\n",
+    "            visited.nodes.add(source)\n",
+    "\n",
+    "\n",
     "\n",
     "    def distance_between(self, node: Node, target: Node, cost_to_node: int):\n",
-    "        dist = pow(target.x - node.x,2) + pow(target.y - node.y,2)\n",
-    "        return math.sqrt(dist) + cost_to_node"
+    "        euclidian_dist = pow(target.x - node.x,2) + pow(target.y - node.y,2)\n",
+    "        heuristic = math.sqrt(euclidian_dist) + cost_to_node\n",
+    "        return node, heuristic"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,31 +323,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "path: List[Node] = a_star.shortest_path_between(source, dest)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[10.219544457292887, 10.219544457292887, 9.48528137423857]"
+       "{Node(x=0, y=1, blocked=False),\n",
+       " Node(x=1, y=0, blocked=False),\n",
+       " Node(x=1, y=1, blocked=False)}"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "path"
+    "set(graph.find_neighbors_of(Node(0,0)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'selected': Node(x=1, y=1, blocked=False),\n",
+       " 'neighbors': [Node(x=0, y=1, blocked=False),\n",
+       "  Node(x=1, y=0, blocked=False),\n",
+       "  Node(x=1, y=1, blocked=False)]}"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "possibilities"
    ]
   },
   {
@@ -323,24 +375,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "x = Node(0, 0)\n",
+    "y = Node(0, 5)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a = set()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a.add(x)\n",
+    "a.add(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{Node(x=0, y=0, blocked=False)}"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "descriptor 'append' for 'collections.deque' objects doesn't apply to a 'int' object",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-113-1f2d771d1167>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mstack\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: descriptor 'append' for 'collections.deque' objects doesn't apply to a 'int' object"
+     ]
+    }
+   ],
+   "source": [
+    "stack.append(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import deque"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = stack()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s.append(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "deque([Node(x=0, y=0, blocked=False)])"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.2 64-bit",
    "language": "python",
-   "name": "python3"
+   "name": "python38264bit2c1b7a46cd9945cba13568f8d3df8e1e"
   },
   "language_info": {
    "codemirror_mode": {
