finished a-star implementation

--- a/notebooks/a-star_path_finder.ipynb
+++ b/notebooks/a-star_path_finder.ipynb
@@ -9,10 +9,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import math\n",
+    "import matplotlib.pyplot as pt\n",
+    "import numpy as np\n",
     "from collections import deque as stack\n",
     "from dataclasses import dataclass\n",
     "from enum import Enum\n",
@@ -21,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,10 +34,10 @@
     "    y: int\n",
     "    blocked: bool\n",
     "\n",
-    "    def __init__(self, x: int, y: int, blocked: bool = Node.is_blocked()):\n",
+    "    def __init__(self, x: int, y: int):\n",
     "        self.x = x\n",
     "        self.y = y\n",
-    "        self.blocked = False\n",
+    "        self.blocked = Node.draw_blocking_condition()\n",
     "\n",
     "    \"\"\"\n",
     "    Generate a binomial random distribution of '0' and '1's\n",
@@ -42,13 +45,16 @@
     "    it cannot be reached\n",
     "    \"\"\"\n",
     "    @classmethod\n",
-    "    def is_blocked(cls):\n",
+    "    def draw_blocking_condition(cls):\n",
     "        dist = np.random.binomial(1, 0.8)\n",
     "        return True if dist == 0 else False\n",
     "\n",
     "    @property\n",
     "    def id(self) -> Tuple[int, int]:\n",
     "        return self.x, self.y\n",
+    "\n",
+    "    def is_blocked(self):\n",
+    "        return self.blocked\n",
     "\n",
     "    def is_free(self):\n",
     "        return not self.blocked\n",
@@ -62,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,6 +117,16 @@
     "    def __init__(self):\n",
     "        self.nodes = dict()\n",
     "        self.edges = dict()\n",
+    "\n",
+    "    def get_node(self, x: int, y: int) -> Optional[Node]:\n",
+    "        return self.nodes.get((x,y))\n",
+    "\n",
+    "    def get_all_nodes(self):\n",
+    "        return list(self.nodes.values())\n",
+    "\n",
+    "    def get_blocked_nodes(self):\n",
+    "        all_nodes = self.get_all_nodes()\n",
+    "        return list(filter(lambda node: node.is_blocked(), all_nodes))\n",
     "\n",
     "    def find_neighbors_of(self, node: Node):\n",
     "        if node.is_free():\n",
@@ -178,18 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as pt\n",
-    "import math"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,56 +206,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [],
    "source": [
-    "area_width = 3\n",
+    "area_width = 4\n",
     "area_height = 4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [],
    "source": [
     "nodes = list(generate_nodes(area_width, area_height))\n",
-    "graph = Graph().with_nodes(nodes)"
+    "graph = Graph().reset().with_nodes(nodes)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 206,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Node(x=1, y=0, blocked=True),\n",
+       " Node(x=1, y=1, blocked=True),\n",
+       " Node(x=1, y=2, blocked=True),\n",
+       " Node(x=2, y=1, blocked=True),\n",
+       " Node(x=2, y=2, blocked=True),\n",
+       " Node(x=2, y=3, blocked=True),\n",
+       " Node(x=3, y=1, blocked=True)]"
+      ]
+     },
+     "execution_count": 206,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "graph.get_blocked_nodes()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 194,
    "metadata": {},
    "outputs": [],
    "source": [
     "## For debugging purposes only\n",
     "\n",
-    "entries = [(1,1), (1,2), (2,2)]\n",
+    "# entries = [(1,1), (1,2), (2,2)]\n",
     "\n",
-    "for entry in entries:\n",
-    "    node = graph.nodes.get(entry)\n",
-    "    node.blocked = True"
+    "# for entry in entries:\n",
+    "#     node = graph.nodes.get(entry)\n",
+    "#     node.blocked = True\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [],
    "source": [
     "for node in graph.nodes.values():\n",
     "    neighbors: List[Node] = graph.find_neighbors_of(node)\n",
     "    edges: List[Edge] = [Edge(node, neighbor) for neighbor in neighbors]\n",
-    "    graph.with_edges(edges)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Sort Terrains in Graph to screw with the edges originating from it"
+    "    graph.with_edges(edges)\n"
    ]
   },
   {
@@ -269,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,25 +308,32 @@
     "\n",
     "    def shortest_path_between(self, source: Node, target: Node) -> List[Node]:\n",
     "        neighbors: Set[Node] = set(graph.find_neighbors_of(source))\n",
-    "        neighbors = neighbors.difference(visited_nodes)\n",
+    "        available_neighbors = neighbors.difference(self.visited_nodes)\n",
     "\n",
-    "        if len(neighbors) > 0:\n",
-    "            edges: List[Edge] = [graph.find_edge_connecting(source, neighbor) for neighbor in neighbors]\n",
-    "            nodes_heuristics = [a_star.distance_between(edge.destination, target, edge.weight) for edge in edges]\n",
-    "            best_node_heuristic = min(nodes_heuristics, key=lambda h: h[1])\n",
-    "            selected_neighbor = best_node_heuristic[0]\n",
-    "\n",
-    "            self.visited_node.add(source)\n",
+    "        if source == target:\n",
     "            self.path_stack.append(source)\n",
-    "            shortest_path_between(source=selected_neighbor, target=target)\n",
+    "            return self.path_stack\n",
     "\n",
     "        else:\n",
-    "            # Rollback\n",
-    "            last_visited_node = self.path_stack.pop()\n",
-    "            visited_nodes.remove(last_visited_node)\n",
-    "            visited.nodes.add(source)\n",
+    "            if len(available_neighbors) > 0:\n",
+    "                edges: List[Edge] = [graph.find_edge_connecting(source, neighbor) for neighbor in available_neighbors]\n",
+    "                nodes_heuristics = [a_star.distance_between(edge.destination, target, edge.weight) for edge in edges]\n",
+    "                best_node_heuristics = min(nodes_heuristics, key=lambda h: h[1])\n",
+    "                selected_neighbor = best_node_heuristics[0]\n",
     "\n",
+    "                self.visited_nodes.add(source)\n",
+    "                self.path_stack.append(source)\n",
+    "                return self.shortest_path_between(source=selected_neighbor, target=target)\n",
     "\n",
+    "            else:\n",
+    "                # Rollback\n",
+    "                try:\n",
+    "                    last_visited_node = self.path_stack.pop()\n",
+    "                    self.visited_nodes.remove(last_visited_node)\n",
+    "                    self.visited_nodes.add(source)\n",
+    "                    return self.shortest_path_between(source=last_visited_node, target=target)\n",
+    "                except IndexError:\n",
+    "                    return self.path_stack\n",
     "\n",
     "    def distance_between(self, node: Node, target: Node, cost_to_node: int):\n",
     "        euclidian_dist = pow(target.x - node.x,2) + pow(target.y - node.y,2)\n",
@@ -312,58 +343,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [],
    "source": [
     "a_star = AStarAlgorithm(graph)\n",
-    "source = graph.nodes.get((0,0))\n",
-    "dest = graph.nodes.get((area_width-1, area_height-1))"
+    "source = graph.nodes.get((0, 0))\n",
+    "target = graph.nodes.get((area_width-1, area_height-1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 199,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = a_star.shortest_path_between(source, target)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{Node(x=0, y=1, blocked=False),\n",
-       " Node(x=1, y=0, blocked=False),\n",
-       " Node(x=1, y=1, blocked=False)}"
+       "[Node(x=0, y=3, blocked=True),\n",
+       " Node(x=1, y=1, blocked=True),\n",
+       " Node(x=1, y=2, blocked=True),\n",
+       " Node(x=1, y=3, blocked=True),\n",
+       " Node(x=3, y=1, blocked=True)]"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 200,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "set(graph.find_neighbors_of(Node(0,0)))"
+    "list(graph.get_blocked_nodes())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'selected': Node(x=1, y=1, blocked=False),\n",
-       " 'neighbors': [Node(x=0, y=1, blocked=False),\n",
-       "  Node(x=1, y=0, blocked=False),\n",
-       "  Node(x=1, y=1, blocked=False)]}"
+       "deque([Node(x=0, y=0, blocked=False),\n",
+       "       Node(x=0, y=1, blocked=False),\n",
+       "       Node(x=1, y=0, blocked=False),\n",
+       "       Node(x=2, y=1, blocked=False),\n",
+       "       Node(x=3, y=2, blocked=False),\n",
+       "       Node(x=3, y=3, blocked=False)])"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 201,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "possibilities"
+    "path"
    ]
   },
   {
@@ -375,120 +419,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "x = Node(0, 0)\n",
-    "y = Node(0, 5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 89,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = set()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 90,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a.add(x)\n",
-    "a.add(x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 91,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{Node(x=0, y=0, blocked=False)}"
-      ]
-     },
-     "execution_count": 91,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 113,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "descriptor 'append' for 'collections.deque' objects doesn't apply to a 'int' object",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-113-1f2d771d1167>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mstack\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: descriptor 'append' for 'collections.deque' objects doesn't apply to a 'int' object"
-     ]
-    }
-   ],
-   "source": [
-    "stack.append(1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 96,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from collections import deque"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 114,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "s = stack()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 115,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "s.append(x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 116,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "deque([Node(x=0, y=0, blocked=False)])"
-      ]
-     },
-     "execution_count": 116,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "s\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
